# isotope-core

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md  PRD-FOLLOWUP.md  PRD-M1.md  PRD-M2.md  PRD-M3.md  PRD-M4.md  PRD-M5.md  PRD-M6.md  PRD-M7.md  ROADMAP.md  TASK-TUI-STEERING.md
examples/: basic_agent.py  context_management.py  middleware.py  multi_provider.py  streaming.py
src/isotope_core/: __init__.py  agent.py  context.py  events.py  loop.py  middleware.py  tools.py  types.py
src/isotope_core/providers/: __init__.py  anthropic.py  base.py  openai.py  proxy.py  router.py  utils.py
src/isotopo_core/: __init__.py  agent.py  context.py  events.py  loop.py  middleware.py  tools.py  types.py
src/isotopo_core/providers/: __init__.py  anthropic.py  base.py  openai.py  proxy.py  router.py  utils.py
tests/: test_abort.py  test_agent.py  test_api_key_resolver.py  test_budget.py  test_context.py  test_continue.py  test_event_filter.py  test_events.py  test_followup.py  test_init_imports.py  test_lifecycle_hooks.py  test_logging_middleware.py  test_loop.py  test_middleware.py  test_provider_anthropic.py  test_provider_openai.py  test_provider_utils.py  test_providers_init.py  test_proxy.py  test_router.py  test_steering.py  test_token_tracking.py  test_tools.py  test_tui_main.py  test_types.py
tests/integration/: __init__.py  conftest.py  test_real_proxy.py
tui/: README.md  __init__.py  main.py
