[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isotopo-core"
version = "0.1.0"
description = "Core primitives for building AI agent loops"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "GhostComplex" },
]
keywords = ["ai", "agent", "llm", "tool-use", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
tiktoken = ["tiktoken>=0.7"]
all = ["isotopo-core[openai,anthropic,tiktoken]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/GhostComplex/isotopo-core"
Repository = "https://github.com/GhostComplex/isotopo-core"
Issues = "https://github.com/GhostComplex/isotopo-core/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/isotopo_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
